--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
         <circle cx="20" cy="20" r="20" />
       </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">s
         <circle cx="20" cy="20" r="20" />
       </svg>
       <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
@@ -123,6 +123,9 @@
       <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
       <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
+    </div>
+    <div class="ten">
+      <img src="img/birthday-cake.gif">
     </div>
   </div>
 </body>
