improve css designs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday!!! :)</title>
+  <meta property="og:title" content="Birthday Surprise"/>
+  <meta property="og:image" content="https://www.freeiconspng.com/uploads/surprise-icon-3.png"/>
+  <title>Birthday Surprise</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
@@ -15,10 +17,10 @@
   <div class="container">
     <div class="one">
       <h1 class="one">
-        <span data-node-name="greeting">Hiii</span>
-        <span data-node-name="name">Dan!</span>
+        <span data-node-name="greeting">Hi</span>
+        <span data-node-name="name">cutie Dan!</span>
       </h1>
-      <p class="two" data-node-name="greetingText">I really like your name btw!</p>
+      <p class="two" data-node-name="greetingText">Thank you for coming into my life 💖</p>
     </div>
     <div class="three">
       <p data-node-name="text1">It's your birthday!!! :D</p>
@@ -121,7 +123,7 @@
     </div>
     <div class="nine">
       <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
-      <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
+      <p id="replay" data-node-name="replayText">Or <b>click me</b>, if you want to watch it again.</p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
     </div>
   </div>
